Introduction of Labeled Property Graph Model & Adjustement of Model Handeling (#415)