@@ -20,12 +20,13 @@ package org.polypheny.db.webui;
 import com.google.common.collect.ImmutableList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import org.junit.Assert;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.polypheny.db.catalog.Catalog;
-import org.polypheny.db.catalog.Catalog.SchemaType;
-import org.polypheny.db.catalog.Catalog.TableType;
+import org.polypheny.db.catalog.Catalog.EntityType;
+import org.polypheny.db.catalog.Catalog.NamespaceType;
 import org.polypheny.db.catalog.entity.CatalogColumn;
 import org.polypheny.db.catalog.entity.CatalogDatabase;
 import org.polypheny.db.catalog.entity.CatalogDefaultValue;
@@ -35,7 +36,7 @@ import org.polypheny.db.catalog.entity.CatalogSchema;
 import org.polypheny.db.catalog.entity.CatalogTable;
 import org.polypheny.db.catalog.entity.CatalogUser;
 import org.polypheny.db.partition.properties.PartitionProperty;
-import org.polypheny.db.sql.core.SqlLanguagelDependant;
+import org.polypheny.db.sql.SqlLanguagelDependant;
 import org.polypheny.db.type.PolyType;
 
 
@@ -56,8 +57,7 @@ public class SchemaToJsonMapperTest extends SqlLanguagelDependant {
                 1,
                 1,
                 1,
-                "hans",
-                TableType.TABLE,
+                EntityType.ENTITY,
                 23L,
                 ImmutableList.of(),
                 true,
@@ -71,14 +71,14 @@ public class SchemaToJsonMapperTest extends SqlLanguagelDependant {
 
         );
 
-        new CatalogSchema( 1, "public", 1, 1, "hans", SchemaType.RELATIONAL );
+        new CatalogSchema( 1, "public", 1, 1, "hans", NamespaceType.RELATIONAL, false );
         new CatalogDatabase( 1, "APP", 1, "hans", 1L, "public" );
-        new CatalogUser( 1, "hans", "secrete", 1L );
+        new CatalogUser( 1, "hans", "secrete" );
         new HashMap<>();
         new HashMap<>();
         Arrays.asList(
                 new CatalogKey( 23L, 4, 1, 1, Arrays.asList( 5L, 6L ), EnforcementTime.ON_COMMIT ),
-                new CatalogKey( 24L, 4, 1, 1, Arrays.asList( 6L ), EnforcementTime.ON_COMMIT )
+                new CatalogKey( 24L, 4, 1, 1, List.of( 6L ), EnforcementTime.ON_COMMIT )
         );
         String json = SchemaToJsonMapper.exportTableDefinitionAsJson( catalogTable, true, true );
         Assert.assertEquals( json, mockJson );
